--- a/Coursera/Views/Home/Index.cshtml
+++ b/Coursera/Views/Home/Index.cshtml
@@ -1,31 +1,44 @@
 ﻿@{
     ViewBag.Title = "Home Page";
 }
+<main>
+    <div class="profile">
+        <div class="profile__img">
+            <img src="~/Content/img/SVG/profile.svg" alt="">
+        </div>
 
-<div class="jumbotron">
-    <h1>ASP.NET</h1>
-    <p class="lead">ASP.NET is a free web framework for building great Web sites and Web applications using HTML, CSS and JavaScript.</p>
-    <p><a href="https://asp.net" class="btn btn-primary btn-lg">Learn more &raquo;</a></p>
-</div>
+        <div class="profile__tabs">
+            <ul>
+                <li><a href="">Curent Courses</a></li>
+                <li><a href="">Interesting Courses</a></li>
+                <li><a href="">Finances</a></li>
+                <li><a href="">Your Courses</a></li>
+            </ul>
+        </div>
 
-<div class="row">
-    <div class="col-md-4">
-        <h2>Getting started</h2>
-        <p>
-            ASP.NET MVC gives you a powerful, patterns-based way to build dynamic websites that
-            enables a clean separation of concerns and gives you full control over markup
-            for enjoyable, agile development.
-        </p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301865">Learn more &raquo;</a></p>
+
+        <section class="video__section text-center">
+            <div class="video__grid" style="grid-column-gap: 0rem; grid-template-areas:none;">
+
+                <!-- LIST OF VIDEOS -->
+                <ul class="video__list " style="padding: 1rem !important;">
+                    @{
+                        for (int i = 0; i < 5; i++) {
+                            <li>
+                                <div class="card m-2">
+                                    <img class="card-img-top" src="~/Content/img/card_image_angular.jpg" alt="">
+                                    <div class="card-body">
+                                        <h5 class="card-title">video title</h5>
+                                        <p class="card-text"> <small class="text-muted"> 666 views </small> </p>
+                                    </div>
+                                </div>
+                            </li>
+                        }
+                    }
+
+                </ul>
+            </div>
+        </section>
     </div>
-    <div class="col-md-4">
-        <h2>Get more libraries</h2>
-        <p>NuGet is a free Visual Studio extension that makes it easy to add, remove, and update libraries and tools in Visual Studio projects.</p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301866">Learn more &raquo;</a></p>
-    </div>
-    <div class="col-md-4">
-        <h2>Web Hosting</h2>
-        <p>You can easily find a web hosting company that offers the right mix of features and price for your applications.</p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301867">Learn more &raquo;</a></p>
-    </div>
-</div>
+</main>
+
