--- a/Coursera/Views/Shared/_LoginPartial.cshtml
+++ b/Coursera/Views/Shared/_LoginPartial.cshtml
@@ -1,22 +1,25 @@
 ﻿@using Microsoft.AspNet.Identity
-@if (Request.IsAuthenticated)
-{
-    using (Html.BeginForm("LogOff", "Account", FormMethod.Post, new { id = "logoutForm", @class = "navbar-right" }))
-    {
-    @Html.AntiForgeryToken()
+@if (Request.IsAuthenticated) {
+    <div class="navigation__sing_in sign_in">
+        <h2>
+            @using (Html.BeginForm("LogOff", "Account", FormMethod.Post, new { id = "logoutForm", @class = "navbar-right" })) {
+            @Html.AntiForgeryToken()
 
-    <ul class="nav navbar-nav navbar-right">
-        <li>
-            @Html.ActionLink("Hello " + User.Identity.GetUserName() + "!", "Index", "Manage", routeValues: null, htmlAttributes: new { title = "Manage" })
-        </li>
-        <li><a href="javascript:document.getElementById('logoutForm').submit()">Log off</a></li>
-    </ul>
-    }
-}
-else
-{
-    <ul class="nav navbar-nav navbar-right">
-        <li>@Html.ActionLink("Register", "Register", "Account", routeValues: null, htmlAttributes: new { id = "registerLink" })</li>
-        <li>@Html.ActionLink("Log in", "Login", "Account", routeValues: null, htmlAttributes: new { id = "loginLink" })</li>
-    </ul>
+
+
+            @*@Html.ActionLink("Hello " + User.Identity.GetUserName() + "!", "Index", "Manage", routeValues: null, htmlAttributes: new { title = "Manage" })*@
+            <a class="btn__sign" href="javascript:document.getElementById('logoutForm').submit()">Sign <span>out</span></a>
+
+            }
+        </h2>
+    </div>
+} else {
+    <div class="navigation__sing_in sign_in">
+        @*data-toggle="modal" data-target="#loginModal">*@
+        <h2>
+            @*@Html.ActionLink("Sign <span>in</span>", "Login", "Account", null, new { @class = "btn__sign"})*@
+            <a class="btn__sign" href="@Url.Action("Login", "Account")">Sign <span>in</span></a>
+        </h2>
+    </div>
+
 }
